@@ -329,27 +329,28 @@ SPI NAND Flash Support List:
 069. XTX XT26G01C
 070. XTX XT26G01A
 071. XTX XT26G02A
-072. MIRA PSU1GS20BN
-073. BIWIN BWJX08U
-074. BIWIN BWET08U
-075. FORESEE FS35ND01GD1F1
-076. FORESEE FS35ND01GS1F1
-077. FORESEE FS35ND02GS2F1
-078. FORESEE FS35ND02GD1F1
-079. FORESEE FS35ND01GS1Y2
-080. FORESEE FS35ND02G-S3Y2
-081. FORESEE FS35ND04G-S2Y2
-082. DS DS35Q2GA
-083. DS DS35M2GA
-084. DS DS35Q1GA
-085. DS DS35M1GA
-086. FISON CS11G0T0A0AA
-087. FISON CS11G1T0A0AA
-088. FISON CS11G0G0A0AA
-089. TYM TYM25D2GA01
-090. TYM TYM25D2GA02
-091. TYM TYM25D1GA03
-092. XINCUN XCSP1AAWH-NT
+072. XTX XT26G02E
+073. MIRA PSU1GS20BN
+074. BIWIN BWJX08U
+075. BIWIN BWET08U
+076. FORESEE FS35ND01GD1F1
+077. FORESEE FS35ND01GS1F1
+078. FORESEE FS35ND02GS2F1
+079. FORESEE FS35ND02GD1F1
+080. FORESEE FS35ND01GS1Y2
+081. FORESEE FS35ND02G-S3Y2
+082. FORESEE FS35ND04G-S2Y2
+083. DS DS35Q2GA
+084. DS DS35M2GA
+085. DS DS35Q1GA
+086. DS DS35M1GA
+087. FISON CS11G0T0A0AA
+088. FISON CS11G1T0A0AA
+089. FISON CS11G0G0A0AA
+090. TYM TYM25D2GA01
+091. TYM TYM25D2GA02
+092. TYM TYM25D1GA03
+093. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
