@@ -108,6 +108,7 @@
 #define _SPI_NAND_MANUFACTURER_ID_ATO_2			0xAD
 #define _SPI_NAND_MANUFACTURER_ID_FM			0xA1
 #define _SPI_NAND_MANUFACTURER_ID_XTX			0x0B
+#define _SPI_NAND_MANUFACTURER_ID_XTX_2			0x2C
 #define _SPI_NAND_MANUFACTURER_ID_MIRA			0xC8
 #define _SPI_NAND_MANUFACTURER_ID_BIWIN			0xBC
 #define _SPI_NAND_MANUFACTURER_ID_FORESEE		0xCD
@@ -194,6 +195,7 @@
 #define _SPI_NAND_DEVICE_ID_XT26G01C		0x11
 #define _SPI_NAND_DEVICE_ID_XT26G01A		0xE1
 #define _SPI_NAND_DEVICE_ID_XT26G02A		0xE2
+#define _SPI_NAND_DEVICE_ID_XT26G02E		0x24
 #define _SPI_NAND_DEVICE_ID_PSU1GS20BN		0x21
 #define _SPI_NAND_DEVICE_ID_BWJX08U		0xB1
 #define _SPI_NAND_DEVICE_ID_BWET08U		0xB2
@@ -1296,6 +1298,20 @@ static const struct SPI_NAND_FLASH_INFO_T spi_nand_flash_tables[] = {
 		ptr_name:				"XTX XT26G02A",
 		mfr_id:					_SPI_NAND_MANUFACTURER_ID_XTX,
 		dev_id:					_SPI_NAND_DEVICE_ID_XT26G02A,
+		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
+		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
+		oob_size:				_SPI_NAND_OOB_SIZE_64BYTE,
+		erase_size:				_SPI_NAND_BLOCK_SIZE_128KBYTE,
+		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
+		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
+		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
+		feature:				SPI_NAND_FLASH_FEATURE_NONE,
+	},
+
+	{
+		ptr_name:				"XTX XT26G02E",
+		mfr_id:					_SPI_NAND_MANUFACTURER_ID_XTX_2,
+		dev_id:					_SPI_NAND_DEVICE_ID_XT26G02E,
 		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
 		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
 		oob_size:				_SPI_NAND_OOB_SIZE_64BYTE,
@@ -2659,7 +2675,14 @@ static SPI_NAND_FLASH_RTN_T ecc_fail_check( u32 page_number )
 	}
 	else if (((ptr_dev_info_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_XTX) && (ptr_dev_info_t->dev_id == _SPI_NAND_DEVICE_ID_XT26G02A)))
 	{
-		if(((status & 0x30) >> 4) == 0x2 )
+		if(((status & 0x30) >> 4) == 0x2)
+		{
+			rtn_status = SPI_NAND_FLASH_RTN_DETECTED_BAD_BLOCK;
+		}
+	}
+	else if (((ptr_dev_info_t->mfr_id == _SPI_NAND_MANUFACTURER_ID_XTX) && (ptr_dev_info_t->dev_id == _SPI_NAND_DEVICE_ID_XT26G02E)))
+	{
+		if(((status & 0x70) >> 4) == 0x7)
 		{
 			rtn_status = SPI_NAND_FLASH_RTN_DETECTED_BAD_BLOCK;
 		}
